Experimenting with css to fix Student Testimonials  header glitch on iPhone 7

--- a/styleSheet.css
+++ b/styleSheet.css
@@ -332,7 +332,7 @@ div.navLinks div{
 #testimonialsLink
 {
     display: grid;
-    padding: 0px;
+    /* padding: 3px; */
     max-width: 100vw;
     grid-template-rows: 15vh auto auto;
     grid-template-columns: 0.5fr minmax(320px, 80vw) 0.5fr;
@@ -352,8 +352,7 @@ div.navLinks div{
     text-align: center;
     color: #495867;
     font-weight: 400;
-    font-size: 3rem;
-    padding: 0px;
+    padding: 3px;
 }
 
 .testimonialBack
